# Samples

./: .buckconfig  .gitignore  .gitmodules  BUCK  CMakeLists.txt  README.md  compile_commands.json  defs.bzl
01_Transformations/: 01_Transformations.cpp  BUCK
03_MultiThread/: 03_MultiThread.cpp  BUCK
06_MaterialPlayground/: 06_MaterialPlayground.cpp
09_LightShadowPlayground/: 09_LightShadowPlayground.cpp
09a_HybridRaytracing/: 09a_HybridRaytracing.cpp
10_ScreenSpaceReflections/: 10_ScreenSpaceReflections.cpp
11_LinkedMultiGPU/: 11_MultiGPU.cpp
11a_UnlinkedMultiGPU/: 11a_UnlinkedMultiGPU.cpp
12_ZipFileSystem/: 12_ZipFileSystem.cpp
14_WaveIntrinsics/: 14_WaveIntrinsics.cpp
15_Transparency/: 15_Transparency.cpp
15a_VisibilityBufferOIT/: 15a_VisibilityBufferOIT.cpp
16_Raytracing/: 16_Raytracing.cpp
17_EntityComponentSystem/: 17_EntityComponentSystem.cpp
19_CodeHotReload/: 19_CodeHotReload_Main.cpp  IGamePlugin.h
21_Animations/: 21_Animations.cpp
28_Skinning/: 28_Skinning.cpp
34_Input/: 34_Input.cpp
36_AlgorithmsAndContainers/: 36_AlgorithmsAndContainers.cpp  AlgorithmsTest.c
Aura/: Aura.cpp
Unit_Tests/01_Transformations/: 01_Transformations.cpp  CMakeLists.txt
Visibility_Buffer/: SanMiguel.cpp  Visibility_Buffer.cpp
Visibility_Buffer2/: SanMiguel.cpp  SanMiguelSDF.cpp  Visibility_Buffer.cpp
